RESOLVED FIXED46870
fast/canvas/webgl/draw-elements-out-of-bounds.html is crashing on Snow Leopard
https://bugs.webkit.org/show_bug.cgi?id=46870
Summary fast/canvas/webgl/draw-elements-out-of-bounds.html is crashing on Snow Leopard
Eric Seidel (no email)
Reported 2010-09-29 20:36:49 PDT
fast/canvas/webgl/draw-elements-out-of-bounds.html is crashing on Snow Leopard http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r68740%20(18485)/fast/canvas/webgl/draw-elements-out-of-bounds-stderr.txt Assertion failed: (0 && "InitThread(): Process hasn't been initalised."), function InitThread, file /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release/build/ANGLE/src/compiler/InitializeDll.cpp, line 71. The crashing started after I turned off some canvas tests as part of this rollout: http://trac.webkit.org/changeset/68737 Since skipping tests should not cause crashes, there was likely a crash here before, masked by other factors. Going to skip this canvas test until zmo/kbr can take a look.
Attachments
Skip the test (1.36 KB, patch)
2010-09-29 20:40 PDT, WebKit Commit Bot
no flags
patch (2.35 KB, patch)
2010-09-30 13:35 PDT, Zhenyao Mo
kbr: review+
zmo: commit-queue-
WebKit Commit Bot
Comment 1 2010-09-29 20:40:44 PDT
Created attachment 69307 [details] Skip the test
WebKit Commit Bot
Comment 2 2010-09-29 20:42:22 PDT
Zhenyao Mo
Comment 3 2010-09-29 21:08:09 PDT
I'll take a look. Looks like Angle issue, but it could be misleading.
Adam Roben (:aroben)
Comment 4 2010-09-30 05:25:15 PDT
Zhenyao Mo
Comment 5 2010-09-30 13:35:18 PDT
Created attachment 69374 [details] patch After discussing with Alok and Dimitri, this is an educated attempt. The cause (from the assertion failure) could be the previous test cleanup is delayed and the current test called ShInitialize() before the ShFinalize() from the previous test.
Eric Seidel (no email)
Comment 6 2010-09-30 13:37:57 PDT
Do we finalize in some other way? or after this change would we never finalize? And what are the consequences of such?
Kenneth Russell
Comment 7 2010-09-30 14:27:17 PDT
Comment on attachment 69374 [details] patch We've discussed this earlier via email and this is the correct fix at the present time.
Zhenyao Mo
Comment 8 2010-09-30 14:48:38 PDT
Eric Seidel (no email)
Comment 9 2010-09-30 16:31:19 PDT
My questions were never answered, but I guess I'm not on the right mailing list. :) Does this need a FIXME for the future?
Kenneth Russell
Comment 10 2010-09-30 16:32:55 PDT
(In reply to comment #9) > My questions were never answered, but I guess I'm not on the right mailing list. :) > > Does this need a FIXME for the future? Not really. At best we would need an at-exit hook, but OS process separation will take care of the cleanup of the needed static and thread-local resources.
Zhenyao Mo
Comment 11 2010-09-30 16:36:49 PDT
(In reply to comment #9) > My questions were never answered, but I guess I'm not on the right mailing list. :) > > Does this need a FIXME for the future? alokp is working on getting rid of ShInitialize and ShFinalize. We'll just live with this until that happens.
Note You need to log in before you can comment on or make changes to this bug.