2010-09-30  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        fast/canvas/webgl/draw-elements-out-of-bounds.html is crashing on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=46870

        * platform/graphics/ANGLEWebKitBridge.cpp:
        (WebCore::ANGLEWebKitBridge::~ANGLEWebKitBridge): Remove ShFinalize().
2010-09-30  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        fast/canvas/webgl/draw-elements-out-of-bounds.html is crashing on Snow Leopard
        https://bugs.webkit.org/show_bug.cgi?id=46870

        * platform/mac-snowleopard/Skipped: Re-enable the test.


Canonical link: https://commits.webkit.org/59465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68833 268f45cc-cd09-0410-ab3c-d52691b4dbfc