WebCore/platform/graphics/ANGLEWebKitBridge.cpp
@@ -44,8 +44,6 @@ ANGLEWebKitBridge::~ANGLEWebKitBridge()
         ShDestruct(m_fragmentCompiler);
         ShDestruct(m_vertexCompiler);
     }
-    
-    ShFinalize();
 }
 
 bool ANGLEWebKitBridge::validateShaderSource(const char* shaderSource, ANGLEShaderType shaderType, String& translatedShaderSource, String& shaderValidationLog)
